--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  font-family: goldman, sans-serif;
+}
+
+@font-face {
+  font-family: goldman, sans-serif;
+  src: url("assets/Goldman-Regular.ttf") format("truetype");
+}
+
+label {
+  font-weight: bold;
+  font-size: 18px;
+}
