--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,19 @@
     <astro-home></astro-home>
   </div>
   <div class="p-col-12">
-    <astro-tarabala></astro-tarabala>
+    <p-accordion>
+      <p-accordionTab header="Tarabala">
+        <astro-tarabala></astro-tarabala>
+      </p-accordionTab>
+      <p-accordionTab header="Chandrabala">
+        <astro-chandrabala></astro-chandrabala>
+      </p-accordionTab>
+      <p-accordionTab header="Gurubala">
+        <astro-gurubala></astro-gurubala>
+      </p-accordionTab>
+      <p-accordionTab header="Panchaka">
+        <astro-panchaka></astro-panchaka>
+      </p-accordionTab>
+    </p-accordion>
   </div>
 </div>
