--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,15 @@ label {
   font-weight: bold;
   font-size: 18px;
 }
+
+.danger {
+  color: red;
+}
+
+.safe {
+  color: lawngreen;
+}
+
+.info-color {
+  color: rgba(26, 115, 238, 1);
+}
