--- a/src/app/chandrabala/chandrabala.component.html
+++ b/src/app/chandrabala/chandrabala.component.html
@@ -18,8 +18,8 @@
     <label>Rashi</label>
     <div>{{userRashi | rashi}}</div>
   </div>
-  <div class="p-field p-col-3">
-    <label>Rashi for Selected Nakshatra</label>
+  <div class="p-field p-col-2">
+    <label>RASHI for Selected Nakshatra</label>
     <astro-rashi-selector (selectedRashi)="setRashi($event)"></astro-rashi-selector>
   </div>
 </div>
